--- a/fiberrod_monitor_final/PackagingLog.html
+++ b/fiberrod_monitor_final/PackagingLog.html
@@ -1,19 +1,19 @@
 <html><meta charset="UTF-8"><pre>
-<font color=blue>mcc -o fiberrod_monitor -W WinMain:fiberrod_monitor -T link:exe -d 'C:\Users\Jan Möller\Uni\Masterarbeit\Rod-Monitor\fiberrod_monitor_final\for_testing' -v 'C:\Users\Jan Möller\Uni\Masterarbeit\Rod-Monitor\fiberrod_monitor.m' -a 'C:\Users\Jan Möller\Uni\Masterarbeit\Rod-Monitor\fiberrod_monitor.fig' -r 'C:\Users\Jan Möller\Uni\Masterarbeit\Rod-Monitor\fiberrod_monitor_final_resources\icon.ico' -a C:\ProgramData\MATLAB\SupportPackages\R2017a\toolbox\daq\supportpackages\mcc -a C:\ProgramData\MATLAB\SupportPackages\R2017a\toolbox\daq\supportpackages\mcc\bin\win64 </font>
-Compiler version: 6.4 (R2017a)
+<font color=blue>mcc -o fiberrod_monitor -W WinMain:fiberrod_monitor -T link:exe -d 'D:\Miller Group Users\Kyle\Code Projects\Rod-Monitor\fiberrod_monitor_final\for_testing' -v 'D:\Miller Group Users\Kyle\Code Projects\Rod-Monitor\fiberrod_monitor.m' -a 'D:\Miller Group Users\Kyle\Code Projects\Rod-Monitor\fiberrod_monitor.fig' -r 'D:\Miller Group Users\Kyle\Code Projects\Rod-Monitor\fiberrod_monitor_final_resources\icon.ico' -a C:\ProgramData\MATLAB\SupportPackages\R2017b\toolbox\daq\supportpackages\mcc -a C:\ProgramData\MATLAB\SupportPackages\R2017b\toolbox\daq\supportpackages\mcc\bin\win64 </font>
+Compiler version: 6.5 (R2017b)
 
 Dependency analysis by REQUIREMENTS.
 
-Parsing file "C:\Users\Jan Möller\Uni\Masterarbeit\Rod-Monitor\fiberrod_monitor.m"
+Parsing file "D:\Miller Group Users\Kyle\Code Projects\Rod-Monitor\fiberrod_monitor.m"
 	(Referenced from: "Compiler Command Line").
 Deleting 3 temporary MEX authorization files.
-Removing: 'C:\Users\JANMLL~1\AppData\Local\Temp\ae55-5522-57b1-bc6d_7324.auth'.
-Removing: 'C:\Users\JANMLL~1\AppData\Local\Temp\257a-3f9d-9c2c-8f5f_7324.auth'.
-Removing: 'C:\Users\JANMLL~1\AppData\Local\Temp\52d4-8c32-c93e-4117_7324.auth'.
-Generating file "C:\Users\Jan Möller\Uni\Masterarbeit\Rod-Monitor\fiberrod_monitor_final\for_testing\readme.txt".
+Removing: 'C:\Users\MILLER~1\AppData\Local\Temp\bcb5-f418-2389-4021_2620.auth'.
+Removing: 'C:\Users\MILLER~1\AppData\Local\Temp\4154-91e3-9e4c-7005_2620.auth'.
+Removing: 'C:\Users\MILLER~1\AppData\Local\Temp\878d-6cd8-7ca8-882e_2620.auth'.
+Generating file "D:\Miller Group Users\Kyle\Code Projects\Rod-Monitor\fiberrod_monitor_final\for_testing\readme.txt".
 <font color=blue>Packaging...</font>
 Creating the bundle...
-Web based installer created at C:\Users\Jan Möller\Uni\Masterarbeit\Rod-Monitor\fiberrod_monitor_final\for_redistribution\installer_rod_monitor.exe.
+Web based installer created at D:\Miller Group Users\Kyle\Code Projects\Rod-Monitor\fiberrod_monitor_final\for_redistribution\installer_rod_monitor.exe.
 Packaging complete.
-Elapsed packaging time was: 3 minutes and 5 seconds.
+Elapsed packaging time was: 1 minutes and 9 seconds.
 </pre></html>
