--- a/fiberrod_monitor_final/PackagingLog.html
+++ b/fiberrod_monitor_final/PackagingLog.html
@@ -1,5 +1,5 @@
 <html><meta charset="UTF-8"><pre>
-<font color=blue>mcc -o fiberrod_monitor -W WinMain:fiberrod_monitor -T link:exe -d 'D:\Miller Group Users\Kyle\Code Projects\Rod-Monitor\fiberrod_monitor_final\for_testing' -v 'D:\Miller Group Users\Kyle\Code Projects\Rod-Monitor\fiberrod_monitor.m' -a 'D:\Miller Group Users\Kyle\Code Projects\Rod-Monitor\fiberrod_monitor.fig' -r 'D:\Miller Group Users\Kyle\Code Projects\Rod-Monitor\fiberrod_monitor_final_resources\icon.ico' -a C:\ProgramData\MATLAB\SupportPackages\R2017b\toolbox\daq\supportpackages\mcc -a C:\ProgramData\MATLAB\SupportPackages\R2017b\toolbox\daq\supportpackages\mcc\bin\win64 </font>
+<font color=blue>mcc -o fiberrod_monitor -W WinMain:fiberrod_monitor -T link:exe -d 'D:\Miller Group Users\Kyle\Code Projects\Rod-Monitor\fiberrod_monitor_final\for_testing' -v 'D:\Miller Group Users\Kyle\Code Projects\Rod-Monitor\fiberrod_monitor.m' -a 'D:\Miller Group Users\Kyle\Code Projects\Rod-Monitor\fiberrod_monitor.fig' -r 'C:\Program Files\MATLAB\R2017b\toolbox\compiler\Resources\default_icon.ico' -a C:\ProgramData\MATLAB\SupportPackages\R2017b\toolbox\daq\supportpackages\mcc -a C:\ProgramData\MATLAB\SupportPackages\R2017b\toolbox\daq\supportpackages\mcc\bin\win64 </font>
 Compiler version: 6.5 (R2017b)
 
 Dependency analysis by REQUIREMENTS.
@@ -7,13 +7,13 @@ Dependency analysis by REQUIREMENTS.
 Parsing file "D:\Miller Group Users\Kyle\Code Projects\Rod-Monitor\fiberrod_monitor.m"
 	(Referenced from: "Compiler Command Line").
 Deleting 3 temporary MEX authorization files.
-Removing: 'C:\Users\MILLER~1\AppData\Local\Temp\bcb5-f418-2389-4021_2620.auth'.
-Removing: 'C:\Users\MILLER~1\AppData\Local\Temp\4154-91e3-9e4c-7005_2620.auth'.
-Removing: 'C:\Users\MILLER~1\AppData\Local\Temp\878d-6cd8-7ca8-882e_2620.auth'.
+Removing: 'C:\Users\MILLER~1\AppData\Local\Temp\2191-4448-2037-0470_8836.auth'.
+Removing: 'C:\Users\MILLER~1\AppData\Local\Temp\602c-66f5-3e60-3056_8836.auth'.
+Removing: 'C:\Users\MILLER~1\AppData\Local\Temp\2d24-d417-81f6-02d2_8836.auth'.
 Generating file "D:\Miller Group Users\Kyle\Code Projects\Rod-Monitor\fiberrod_monitor_final\for_testing\readme.txt".
 <font color=blue>Packaging...</font>
 Creating the bundle...
 Web based installer created at D:\Miller Group Users\Kyle\Code Projects\Rod-Monitor\fiberrod_monitor_final\for_redistribution\installer_rod_monitor.exe.
 Packaging complete.
-Elapsed packaging time was: 1 minutes and 9 seconds.
+Elapsed packaging time was: 1 minutes and 17 seconds.
 </pre></html>
